<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ChildLocator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user">UserName</string>
    <string name="pass">Password</string>
    <string name="title_activity_post_login">PostLoginActivity</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="add">AddDependent</string>
    <string name="remove">RemoveDependent</string>

    
</resources>
